kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-ticket
  labels:
    app.kubernetes.io/part-of: service-ticket-classifier
