kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ticket-ingress
  namespace: service-ticket
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-ticket-api
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-ticket-frontend
                port:
                  number: 80
